---
source: tests/exec.rs
description: conditional_jumps
expression: app_output
---
mov cx, 3 ; cx:0x0->0x3, ip:0x0->0x3, 
mov bx, 1000 ; bx:0x0->0x3e8, ip:0x3->0x6, 
add bx, word 10 ; bx:0x3e8->0x3f2, ip:0x6->0x9, 
sub cx, word 1 ; cx:0x3->0x2, ip:0x9->0xc, 
jne $-8 ; ip:0xc->0x6, 
add bx, word 10 ; bx:0x3f2->0x3fc, ip:0x6->0x9, 
sub cx, word 1 ; cx:0x2->0x1, ip:0x9->0xc, 
jne $-8 ; ip:0xc->0x6, 
add bx, word 10 ; bx:0x3fc->0x406, ip:0x6->0x9, 
sub cx, word 1 ; cx:0x1->0x0, ip:0x9->0xc, flags:->Z
jne $-8 ; ip:0xc->0xe, 

Final registers:
   ax: 0x0000 (0)
   bx: 0x0406 (1030)
   cx: 0x0000 (0)
   dx: 0x0000 (0)
   sp: 0x0000 (0)
   bp: 0x0000 (0)
   si: 0x0000 (0)
   di: 0x0000 (0)
   ip: 0x000e (14)
flags: Z

